# smolitux-ui

./: .codex.json  .env.example  .eslintignore  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  404.html  AGENTS.md  AGENTS.old.md  ANALYSIS.md  ANALYSIS_REPORT.md  CHANGELOG.md  CLAUDE.md  CODEX_PROGRESS.md  CODEX_REDESIGN_PLAN.md  COMPONENT_DEVELOPMENT_PLAN.md  COMPONENT_STATUS.md  COMPREHENSIVE_ANALYSIS_REPORT.md  CONTRIBUTING.md  CREDITS.md  Codex-Prompt.md  DOCUMENTATION.md  Dockerfile  FORMFIELD_SUCCESS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  INTEGRATION_REPORT.md  LIVE_PROCESS_REPORT.md  MANUAL_PR_INSTRUCTIONS.md  Makefile  NEXT_Codex_Prompt-drawer-paused.md  NEXT_Codex_Prompt-drawer-refactor.md  NEXT_Codex_Prompt-drawer-ui.md  NEXT_Codex_Prompt-dropdown.md  NEXT_Codex_Prompt-fileupload.md  NEXT_Codex_Prompt-formgroup.md  NEXT_Codex_Prompt-icon.md  NEXT_Codex_Prompt-input.md  (+64 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.husky/: pre-commit
.storybook/: babel.config.js  main.js  main.ts  manager.ts  preview-head.html  preview.js  preview.ts
Trash/: README.md  pyproject.toml  requirements.txt  test_main.py
analysis/: arbeitsplan.md  entwicklungsplan.md  fortschritt.md  komponenten-analyse.md  lint-fehler-plan.md  status-report.md  test-bericht.md
archive_tgz/: smolitux-ai-0.2.1.tgz
blog/: accessibility-focus-smolitux.html  archive.html  atom.xml  authors.html  first-blog-post.html  introducing-smolitux-ui.html  long-blog-post.html  mdx-blog-post.html  rss.xml  smolitux-ui-overview.html  smolitux-ui-roadmap-2025.html  tags.html  welcome.html
docs/: Prompt.md  README.md  accessibility.html  code-review-analysis.md  components.html  development.html  docusaurus.config.ts  improvement-plan.html  index.md  intro.html  package.json  prompts  pull-request-template.md  sidebars.ts  styling.html  tsconfig.json
docs.old/: package-lock.json
e2e-tests/: accessibility.e2e.test.ts  browser-compatibility.e2e.test.ts  button.spec.ts  form-components.e2e.test.ts  modal-dialog.e2e.test.ts  tooltip-drawer.e2e.test.ts
en/: 404.html  blog.html  docs.html  guide.html  index.html  markdown-page.html  sitemap.xml  wiki.html
guide/: ci-overview.html
prompts/: README.md
scripts/: Monorepo-Struktur.sh  README.md  REORGANIZATION.md  cleanup.sh  (+23 more)
(+3831 files in other folders)
